<resources>
    <string name="app_name"></string>
    <string name="Search">ค้นหา</string>
    <string name="Build">โปรดระบุหมายเลขห้อง</string>
    <string name="Name">ชื่อ</string>
    <string name="Login">ล็อกอิน</string>
    <string name="Admin">สำหรับเจ้าหน้าที่</string>
    <string name="Register">สมัครสมาชิก</string>
    <string name="SingUp">ลงทะเบียน</string>
    <string name="Build1">เพิ่มข้อมูลอาคาร</string>
    <string name="Shop">เพิ่มข้อมูลร้านค้า</string>
    <string name="Dorm">เพิ่มข้อมูลหอพัก</string>
    <string name="title_activity_maps">Map</string>
    <string name="pbru">ระบบสืบค้นและระบุตำแหน่ง</string>
    <string name="username">ชื่อผู้ใช้</string>
    <string name="Password">รหัสผ่าน</string>
    <string name="user_id">รหัสผู้ใช้</string>
    <string name="user_name">ชื่อ-นามสกุล</string>
    <string name="email">อีเมล</string>
    <string name="phone">เบอร์โทร</string>
    <string name="User">User :</string>

    <string name="title_haveSpace">มีช่องว่าง</string>
    <string name="message_haveSpace">กรุณากรอกทุกช่อง คะ</string>
    <string name="title_userFalse">User ผิด</string>
    <string name="message_userFalse">ไม่มี User นี่ ในฐานข้อมูลของเรา</string>
    <string name="title_passwordFalse">Password ผิด</string>
    <string name="message_passwordFalse">กรุณาพิ่มพ์ Password ใหม่ Password ผิด</string>
    <string name="title_activity_service_admin">Map</string>
    <string name="title_activity_add_edit">Map</string>


</resources>
